# binance-lob-capture

./: .gitignore  CMakeLists.txt  README.md
docs/: architecture.md  design_review.md  requirement_mapping.md  requirements.md
include/common/: constants.hpp  scaled_int.hpp  signal_handler.hpp  time_utils.hpp  types.hpp
include/csv/: csv_escape.hpp  market_data_writer.hpp  orderbook_writer.hpp
include/marketdata/: event.hpp  sequence_validator.hpp  stream_parser.hpp
include/metrics/: metrics.hpp
include/orderbook/: lob_engine.hpp  order_book.hpp  snapshot.hpp
include/replay/: csv_reader.hpp  replay_engine.hpp
include/websocket/: connection_manager.hpp  websocket_client.hpp
sample_output/: market_data_spot_BTCUSDT_2025-06-03.csv  market_data_spot_BTCUSDT_2025-06-03_orderbook.csv
scripts/: setup_dependencies.ps1
src/: main.cpp
src/common/: scaled_int.cpp  signal_handler.cpp  time_utils.cpp
src/csv/: csv_escape.cpp  market_data_writer.cpp  orderbook_writer.cpp
src/marketdata/: sequence_validator.cpp  stream_parser.cpp
src/metrics/: metrics.cpp
src/orderbook/: lob_engine.cpp  order_book.cpp
src/replay/: csv_reader.cpp  replay_engine.cpp
src/websocket/: connection_manager.cpp  websocket_client.cpp
tests/: CMakeLists.txt  test_connection_manager.cpp  test_csv_escape.cpp  test_csv_schema.cpp  test_framework.hpp  test_lob_engine.cpp  test_main.cpp  test_market_data_writer.cpp  test_order_book.cpp  test_orderbook_writer.cpp  test_replay.cpp  test_replay_integration.cpp  test_scaled_int.cpp  test_sequence_validator.cpp  test_stream_parser.cpp
